log/build_2025-07-24_10-12-05/tello_control/stdout_stderr.log
running egg_info
writing ../../build/tello_control/tello_control.egg-info/PKG-INFO
writing dependency_links to ../../build/tello_control/tello_control.egg-info/dependency_links.txt
writing entry points to ../../build/tello_control/tello_control.egg-info/entry_points.txt
writing requirements to ../../build/tello_control/tello_control.egg-info/requires.txt
writing top-level names to ../../build/tello_control/tello_control.egg-info/top_level.txt
reading manifest file '../../build/tello_control/tello_control.egg-info/SOURCES.txt'
writing manifest file '../../build/tello_control/tello_control.egg-info/SOURCES.txt'
running build
running build_py
copying tello_control/control_node.py -> /home/roboticslab/rise/build/tello_control/build/lib/tello_control
running install
running install_lib
copying /home/roboticslab/rise/build/tello_control/build/lib/tello_control/control_node.py -> /home/roboticslab/rise/install/tello_control/lib/python3.12/site-packages/tello_control
byte-compiling /home/roboticslab/rise/install/tello_control/lib/python3.12/site-packages/tello_control/control_node.py to control_node.cpython-312.pyc
  File "/home/roboticslab/rise/install/tello_control/lib/python3.12/site-packages/tello_control/control_node.py", line 194
    plt.plot(range(len(vx))), vx, color='blue', label='Filtered Vx', linestyle='-')
                                                                                  ^
SyntaxError: unmatched ')'

running install_data
running install_egg_info
removing '/home/roboticslab/rise/install/tello_control/lib/python3.12/site-packages/tello_control-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/tello_control/tello_control.egg-info to /home/roboticslab/rise/install/tello_control/lib/python3.12/site-packages/tello_control-0.0.0-py3.12.egg-info
running install_scripts
Installing command script to /home/roboticslab/rise/install/tello_control/lib/tello_control
Installing control script to /home/roboticslab/rise/install/tello_control/lib/tello_control
Installing test script to /home/roboticslab/rise/install/tello_control/lib/tello_control
writing list of installed files to '/home/roboticslab/rise/build/tello_control/install.log'
